If statements for Logger

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
         "future": "cpp",
         "mutex": "cpp",
         "sstream": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp"
     }
 }
